k8s/manifests-d9a8c8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-d9a8c8
  namespace: journee
  labels:
    app: journee-d9a8c8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-d9a8c8
  template:
    metadata:
      labels:
        app: journee-d9a8c8
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-d9a8c8
          image: gcr.io/my-docker-471807/journee:d9a8c8-203cbb
          ports:
            - containerPort: 3000
