k8s/manifests-d9a8c8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-d9a8c8
  namespace: journee
spec:
  selector:
    app: journee-d9a8c8
  ports:
    - port: 80
      targetPort: 3000
